# yt-music-cli

./: .gitignore  LICENSE  README.md  SETUP_GUIDE.md  favorites.json  main.py  pyproject.toml  requirements.txt  styles.css  test_cookies.py  yt-music
.jules/: bolt.md
src/: config.py
src/api/: auth.py  client.py
src/player/: functionality.py
src/tui/: app.py  styles.css  utils.py
src/tui/screens/: account.py  login.py  player.py
tests/: check_imports.py  repro_blocking.py  test_auth_manual.py  test_auth_packaging.py  test_client.py  test_custom_creds.py  test_oauth_logic.py  test_player_concurrency.py  test_player_functionality.py  test_ui_structure.py
